--- a/styles/snippets.css
+++ b/styles/snippets.css
@@ -9,12 +9,17 @@
   width: 90%;
   max-width: 600px;
   margin: 1rem 0;
-  padding: 1rem;
   border: 1px solid;
   background-color: #eeeeee;
   border-radius: 5px;
   box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.1)
 }
+
+.snip .text {
+  padding: 1rem;
+  padding-bottom: 0;
+}
+
 
 .snip h2 {
   margin-bottom: 0.5rem;
@@ -23,4 +28,8 @@
 .snip p {
   margin-bottom: 1rem;
   color: rgba(0, 0, 0, 0.75);
+}
+
+.snip pre code {
+  border-radius: 0 0 5px 5px;
 }
